基本功能已完成！

--- a/190428_RobotContest/robotcontest.qrc
+++ b/190428_RobotContest/robotcontest.qrc
@@ -1,4 +1,6 @@
 <RCC>
-    <qresource prefix="RobotContest">
+    <qresource prefix="/">
+        <file>bg.png</file>
+        <file>hh.png</file>
     </qresource>
 </RCC>
