--- a/190428_RobotContest/robotcontest.qrc
+++ b/190428_RobotContest/robotcontest.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/">
         <file>bg.png</file>
         <file>hh.png</file>
+        <file>style.qss</file>
     </qresource>
 </RCC>
